--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav class="nav-bar">
             
             <a href="#">About</a>
-            <a href="./experiencie.html">Experience</a>
-            <a href="./formation.html">Formation</a>
+            <a href="../JS desde cero/pages/experiencie.html">Experience</a>
+            <a href="../JS desde cero/pages/formation.html">Formation</a>
         
         </nav>
 
