--- a/pages/experiencie.html
+++ b/pages/experiencie.html
@@ -23,7 +23,7 @@
         <!-- barra de navegación -->
         <nav class="nav-bar">
             
-            <a href="./about.html">About</a>
+            <a href="../index.html">About</a>
             <a href="#">Experience</a>
             <a href="./formation.html">Formation</a>
             
