--- a/pages/formation.html
+++ b/pages/formation.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <nav class="nav-bar">
-        <a href="./about.html">About</a>
+        <a href="../index.html">About</a>
         <a href="./experiencie.html">Experience</a>
         <a href="#">Formation</a>
         
