--- a/pages/experiencie.html
+++ b/pages/experiencie.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="../favicon/search.png" type="image/x-icon">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,100&family=Quicksand&family=Ysabeau:ital,wght@1,200&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <!-- Header de la página -->
         <header>
             <div>
-                <img src="../image/Foto Davo.jpeg" alt="Logo de la página" width="300px" height="280px">
+                <img src="./image/Foto Davo.jpeg" alt="Logo de la página" width="300px" height="280px">
                 <h1> David Velázquez Corona </h1>
                 <p> Licenciado en Ciencias de la informática </p>
             </div>
@@ -50,13 +50,13 @@
                     <h1> Isaac Rodriguez</h1>
                     <p><b>Phone:</b> 5536763193</p>
                     <p><b>Mail:</b> isaacrdzcc@gmail.com</p>
-                    <img src="../image/Isaac.jpg" alt="Foto-Isaac" width="250px" height="250px">
+                    <img src="./image/Isaac.jpg" alt="Foto-Isaac" width="250px" height="250px">
                 </div>
                 <div class="refer2">
                     <h1> Eduardo Granados</h1>
                     <p><b>Phone:</b> 5561905664</p>
                     <p><b>Mail:</b> lalograna@gmail.com</p>
-                    <img src="../image/Lalo.jpg" alt="Foto-Lalo" width="250px" height="250px">
+                    <img src="./image/Lalo.jpg" alt="Foto-Lalo" width="250px" height="250px">
                 </div>
             </div>
             </section>
