--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../favicon/search.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./favicon/search.png" type="image/x-icon">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,8 +24,8 @@
         <nav class="nav-bar">
             
             <a href="#">About</a>
-            <a href="../JS desde cero/pages/experiencie.html">Experience</a>
-            <a href="../JS desde cero/pages/formation.html">Formation</a>
+            <a href="./pages/experiencie.html">Experience</a>
+            <a href="./pages/formation.html">Formation</a>
         
         </nav>
 
