--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Header de la página -->
         <header>
             <div>
-                <img src="../image/Foto Davo.jpeg" alt="Logo de la página" width="300px" height="280px">
+                <img src="./image/Foto Davo.jpeg" alt="Logo de la página" width="300px" height="280px">
                 <h1> David Velázquez Corona </h1>
                 <p> Licenciado en Ciencias de la informática </p>
             </div>
@@ -43,8 +43,8 @@
 
                 <h1>Social Media</h1>
                 <div class="Social-media">
-                    <a href="https://www.instagram.com/davoveco/" target="_blank"><img src="../image/instagram (1).png" alt="Instagram" width="70px" height="70px"></a>
-                    <a href="https://www.facebook.com/david.velazquezcorona.1/" target="_blank"><img src="../image/facebook (1).png" alt="Facebook" width="70px" height="70px"></a>
+                    <a href="https://www.instagram.com/davoveco/" target="_blank"><img src="./image/instagram (1).png" alt="Instagram" width="70px" height="70px"></a>
+                    <a href="https://www.facebook.com/david.velazquezcorona.1/" target="_blank"><img src="./image/facebook (1).png" alt="Facebook" width="70px" height="70px"></a>
                 </div>
             </aside>
 
