--- a/pages/experiencie.html
+++ b/pages/experiencie.html
@@ -15,7 +15,7 @@
         <!-- Header de la página -->
         <header>
             <div>
-                <img src="./image/Foto Davo.jpeg" alt="Logo de la página" width="300px" height="280px">
+                <img src="../image/Foto Davo.jpeg" alt="Logo de la página" width="300px" height="280px">
                 <h1> David Velázquez Corona </h1>
                 <p> Licenciado en Ciencias de la informática </p>
             </div>
