--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <section class="main">
                 <article>
                     <h2> ABOUT ME </h2>
-                    <p class="p1">I'm a Web Developer, actually i'm a student Computer Science, i'm in 6°semester of 8°
+                    <p class="p1">I'm a Web Developer, actually a student Computer Science, coursing a 6 semester of 8
                     i'm taking a course called "FullStack Developer" in CoderHouse. <br>
-                    These are some of my skills, i'm working in each of them: </p>
+                    These are some of my skills, i'm developing each of them: </p>
 
                 <section class="skills">
                     <p><b>HTML:</b> 100%</p>
@@ -65,15 +65,15 @@
                 </article>
                 <section class="Years">
                     <h1>Years of Experience in Web Developer</h1>
-                    <p class="p1"> Actually my job experience isn't a lot, but i'm looking the opportunity to grow in my area.</p>
+                    <p class="p1"> Actually my job experience isn't a lot, but i'm looking the opportunity to grow up in my area.</p>
 
                     <h1> Qualities </h1>
                     <ul>
-                        <li class="p1">I speak english, i consider my level is a 75%, actually i'm taking an english classes to perfect the language</li>
-                        <li class="p1">I'm a competent person</li>
-                        <li class="p1">I seek to do things in the best way</li>
-                        <li class="p1">I consider myself creative and I know that I can contribute interesting things.</li>
-                        <li class="p1">I like to learn new technologies</li>          
+                        <li class="p1">I speak english, i consider my level is a 75%, actually i'm taking an english class to improve the language</li>
+                        <li class="p1">I consider i'm a competent person</li>
+                        <li class="p1">I'm trying to do things in the best way</li>
+                        <li class="p1">I believe i'm a creative person and I know I could contribute with interesting things to the company.</li>
+                        <li class="p1">I'm open to learn new technologies and more.</li>          
                     </ul>
                    
                 </section>
