--- a/pages/experiencie.html
+++ b/pages/experiencie.html
@@ -33,12 +33,12 @@
                 <h1>EXPERIENCE</h1>
                 <div class="container">
                     <h1> ALU'S HAMBURGUESAS - July 2022 to November 2022</h1>
-                    <p> I was working as a waiter, in this job i learned about how to provide a service to people, i was working for 4 months.
+                    <p> I worked as a waiter, in this job i learned about how to provide a service to people, i was working during 4 months.
                     </p>
                 </div>
                 <div class="container">
                     <h1> TESTER QA GRUPO CARSO - November 2022 to May 2023</h1>
-                    <p> I was working as a tester, in this job i applied tests to the application "Claro Video", I kept track of bugs and reported them to the developer, i was a scholarship holder in this job, i was working for 6 months. </p>
+                    <p> I worked as a tester, in this company i applied tests to the application "Claro Video", I seek bugs and reported them to the developer, i was a scholarship holder in this job, i worked durig 6 months. </p>
                 </div>
                
             </section>
