--- a/pages/formation.html
+++ b/pages/formation.html
@@ -30,14 +30,14 @@
                 <div class="Bac">
                     <h1>EDUCATION</h1>
                     <h2>HIGH SCHOOL</h2>
-                    <p>I took the high school in "Universidad Chapultepec", I came away with an average of 8.2,
-                       i started study in June 2016 and i will finish my career in December 2019. </p>
+                    <p>I studied the high school in "Universidad Chapultepec", I got an average of 8.2,
+                       i started studying in June 2016 and i finished my schedule on December 2019. </p>
                 </div>
                 
                 <div class="Uni">
                     <h2>UNIVERSITY</h2>
-                    <p>I'm study in the "Instituto Politécnico Nacional" actually i'm a student Computer Science, i'm in 6°semester of 8°,
-                    i started study in February 2021 and i will finish my career in December 2024, my average is 8.3
+                    <p>I'm studying at the "Instituto Politécnico Nacional", actually i'm a student Computer Science,
+                    i started studying on February 2021 and i expect finish my career on December 2024, my actually average is 8.3
                     </p>
                 </div>
             </div>
@@ -45,7 +45,7 @@
         <section>
             <div class="Goals">
                 <h1>GOALS</h1>
-                <p>One of my goals is to train in the field of web development, generate experience, refine and learn new technologies.</p>
+                <p>One of my principal goals is to get a job in web development, generate experience, refine and learn new technologies.</p>
             </div>
         </section>
         <a href="./about.html" class="read-more">Home</a>
