--- a/pages/experiencie.html
+++ b/pages/experiencie.html
@@ -50,13 +50,13 @@
                     <h1> Isaac Rodriguez</h1>
                     <p><b>Phone:</b> 5536763193</p>
                     <p><b>Mail:</b> isaacrdzcc@gmail.com</p>
-                    <img src="./image/Isaac.jpg" alt="Foto-Isaac" width="250px" height="250px">
+                    <img src="../image/Isaac.jpg" alt="Foto-Isaac" width="250px" height="250px">
                 </div>
                 <div class="refer2">
                     <h1> Eduardo Granados</h1>
                     <p><b>Phone:</b> 5561905664</p>
                     <p><b>Mail:</b> lalograna@gmail.com</p>
-                    <img src="./image/Lalo.jpg" alt="Foto-Lalo" width="250px" height="250px">
+                    <img src="../image/Lalo.jpg" alt="Foto-Lalo" width="250px" height="250px">
                 </div>
             </div>
             </section>
