--- a/pages/experiencie.html
+++ b/pages/experiencie.html
@@ -44,7 +44,7 @@
             </section>
             
             <section>
-                <h1 class="ref">REFERENCES</h1>
+                <h1> REFERENCES</h1>
                 <div class="container-refer">
                 <div class="refer1">
                     <h1> Isaac Rodriguez</h1>
